--- a/estilos/style.css
+++ b/estilos/style.css
@@ -97,7 +97,7 @@ footer {
     color: white;
     padding: 8px;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 0.8em;
+    font-size: 1em;
     text-align: center;
 }
 
@@ -108,5 +108,5 @@ footer > p > a {
 }
 
 footer > p > a:hover {
-    text-decoration: overline;
+    text-decoration: underline;
 }
